--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@ eleventyNavigation:
             </div>
             <div class="cs-flex cs-flex2">
                 <p class="cs-text">
-                    At ArchiStitch, we seamlessly blend innovative design with functionality, creating spaces that inspire, elevate, and endure. From visionary concepts to flawless execution, we craft architectural masterpieces tailored to your lifestyle.
+                    At 918 The Lab, we combine bold design with expert precision to transform vehicles into rolling works of art. From concept to application, we deliver custom wraps that turn heads, elevate brands, and stand the test of time.
                 </p>
                 <a href="" class="cs-button-solid">Book A Call</a>
             </div>
@@ -105,16 +105,16 @@ eleventyNavigation:
         <div class="cs-content">
             <div class="cs-header">
                 <span class="cs-topper">About Us</span>
-                <h2 class="cs-title">Creating Elegant Environments, One Detail At A Time</h2>
+                <h2 class="cs-title">Transforming Vehicles, One Detail at a Time</h2>
             </div>
             <div class="cs-wrapper">
                 <div class="cs-flex">
                     <p class="cs-text">
-                        At BuildStitch, we specialize in turning your dream projects into reality. From bespoke custom homes to intricate hardscaping and extensions, our expertise ensures a flawless journey from concept to completion. Whether you're planning a renovation or a ground-up build, our focus is on exceeding expectations every step of the way.
+                        At 918 The Lab, we specialize in transforming your vision into reality—one vehicle at a time. Whether it’s a full custom wrap, branding for your business fleet, or subtle accents that make your car stand out, we bring expert craftsmanship and attention to detail to every project. From design to installation, we’re committed to delivering results that exceed expectations and turn every drive into a statement.
                     </p>
                     <img class="cs-signature" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/MISC/signature.png" decoding="async" loading="lazy" alt="signature" width="170" height="59" aria-hidden="true">
-                    <span class="cs-name">William John</span>
-                    <span class="cs-desc">Founder of Build Stitch</span>
+                    <span class="cs-name">Junior Ronquillo</span>
+                    <span class="cs-desc">Owner of 918 The Lab</span>
                     <!--if you change this button class name, change the class name to rename it as well in the css at small desktop media query-->
                     <a href="" class="cs-button-solid">Get Started Today</a>
                 </div>
@@ -490,10 +490,10 @@ eleventyNavigation:
         <div class="cs-content">
             <div class="cs-flex">
                 <span class="cs-topper">Why Choose Us</span>
-                <h2 class="cs-title">Grow Your Business with Our New Bold Agency</h2>
+                <h2 class="cs-title">Drive Your Brand Forward with 918 The Lab</h2>
             </div>
             <p class="cs-text">
-                Aqestic recusandae laudantium optio amet a quisquam saepe aliquid, voluptate praesentium dicta fuga dolor error perspiciatis voluptatem eum cupiditate totam reiciendis quam minus inventore sint rem impedit esse quasi Tenetur sed reprehenderit earum a magni aliquid blanditiis dolores, veritatis soluta autem beatae officia expedita ipsum rerum doloribus sit provident delectus.
+                At 918 The Lab, we’re more than just a wrap shop—we’re your creative partner. We combine cutting-edge design, premium materials, and expert installation to help you stand out on the road and grow your brand with confidence. Quality, precision, and style drive everything we do.
             </p>
         </div>  
         <div class="cs-wrapper">
@@ -544,22 +544,22 @@ eleventyNavigation:
                 <div class="cs-picture-wrapper">
                     <picture class="cs-picture cs-picture1">
                         <!--Mobile Image-->
-                        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting9.jpg">
+                        <source media="(max-width: 600px)" srcset="https://ik.imagekit.io/6ycdefzj5/car-wrapping-mechanic-with-squeegee-installs-film-2024-12-05-05-19-40-utc.jpg?updatedAt=1749499952268">
                         <!--Tablet and above Image-->
-                        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting9.jpg">
-                        <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting9.jpg" alt="meeting" width="434" height="414">
+                        <source media="(min-width: 601px)" srcset="https://ik.imagekit.io/6ycdefzj5/car-wrapping-mechanic-with-squeegee-installs-film-2024-12-05-05-19-40-utc.jpg?updatedAt=1749499952268">
+                        <img loading="lazy" decoding="async" src="https://ik.imagekit.io/6ycdefzj5/car-wrapping-mechanic-with-squeegee-installs-film-2024-12-05-05-19-40-utc.jpg?updatedAt=1749499952268" alt="meeting" width="434" height="414">
                     </picture>
                     <div class="cs-box">
-                        <span class="cs-header">Attorney Growth</span>
+                        <span class="cs-header">Custom Wrap</span>
                         <span class="cs-desc">Aqestic recusandae lauda </span>
                     </div>
                 </div>
                 <picture class="cs-picture cs-picture2">
                     <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/computer.jpg">
+                    <source media="(max-width: 600px)" srcset="https://ik.imagekit.io/6ycdefzj5/worker-installs-protection-film-on-car-hood-2024-11-26-09-43-24-utc.jpg?updatedAt=1749510106435">
                     <!--Tablet and above Image-->
-                    <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/computer.jpg">
-                    <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/computer.jpg" alt="on computer" width="197" height="197">
+                    <source media="(min-width: 601px)" srcset="https://ik.imagekit.io/6ycdefzj5/worker-installs-protection-film-on-car-hood-2024-11-26-09-43-24-utc.jpg?updatedAt=1749510106435">
+                    <img loading="lazy" decoding="async" src="https://ik.imagekit.io/6ycdefzj5/worker-installs-protection-film-on-car-hood-2024-11-26-09-43-24-utc.jpg?updatedAt=1749510106435" alt="on computer" width="197" height="197">
                 </picture>
             </div>
         </div>
@@ -575,10 +575,10 @@ eleventyNavigation:
 <section id="gallery-2250">
     <div class="cs-container">
         <div class="cs-content">
-            <span class="cs-topper">ALL SERVICES</span>
-            <h2 class="cs-title">A Dedicated Team Of Photographers, Capturing Precious Moments With Every Click</h2>
+            <span class="cs-topper">PAST JOBS</span>
+            <h2 class="cs-title">A Showcase of Craftsmanship — One Wrap at a Time</h2>
             <p class="cs-text">
-                We have courses on-demand and live instructors for workshops and support. We also provide LIVE instructor-led training courses and onsite training.
+                Explore our gallery of past projects—each wrap designed, crafted, and installed by our expert team. From bold business branding to custom personal designs, every vehicle we touch is built to turn heads and make a statement.
             </p>
         </div>
         <ul class="cs-card-group">
@@ -594,10 +594,10 @@ eleventyNavigation:
                     <!--Background Image-->
                     <picture class="cs-background">
                         <!--Mobile Image-->
-                        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/wedding1.jpg">
+                        <source media="(max-width: 600px)" srcset="https://ik.imagekit.io/6ycdefzj5/918gallery1.png?updatedAt=1749570220538">
                         <!--Tablet and above Image-->
-                        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/wedding1.jpg">
-                        <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/wedding1.jpg" alt="person" width="352" height="440">
+                        <source media="(min-width: 601px)" srcset="https://ik.imagekit.io/6ycdefzj5/918gallery1.png?updatedAt=1749570220538">
+                        <img loading="lazy" decoding="async" src="https://ik.imagekit.io/6ycdefzj5/918gallery1.png?updatedAt=1749570220538" alt="person" width="352" height="440">
                     </picture>
                 </a>
             </li>
@@ -613,10 +613,10 @@ eleventyNavigation:
                     <!--Background Image-->
                     <picture class="cs-background">
                         <!--Mobile Image-->
-                        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/wedding1.jpg">
+                        <source media="(max-width: 600px)" srcset="https://ik.imagekit.io/6ycdefzj5/918gallery2image.png?updatedAt=1749570262226">
                         <!--Tablet and above Image-->
-                        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/wedding1.jpg">
-                        <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/wedding1.jpg" alt="person" width="352" height="440">
+                        <source media="(min-width: 601px)" srcset="https://ik.imagekit.io/6ycdefzj5/918gallery2image.png?updatedAt=1749570262226">
+                        <img loading="lazy" decoding="async" src="https://ik.imagekit.io/6ycdefzj5/918gallery2image.png?updatedAt=1749570262226" alt="person" width="352" height="440">
                     </picture>
                 </a>
             </li>
@@ -632,10 +632,10 @@ eleventyNavigation:
                     <!--Background Image-->
                     <picture class="cs-background">
                         <!--Mobile Image-->
-                        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/wedding1.jpg">
+                        <source media="(max-width: 600px)" srcset="https://ik.imagekit.io/6ycdefzj5/918gallery3image.png?updatedAt=1749570292814">
                         <!--Tablet and above Image-->
-                        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/wedding1.jpg">
-                        <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/wedding1.jpg" alt="person" width="352" height="440">
+                        <source media="(min-width: 601px)" srcset="https://ik.imagekit.io/6ycdefzj5/918gallery3image.png?updatedAt=1749570292814">
+                        <img loading="lazy" decoding="async" src="https://ik.imagekit.io/6ycdefzj5/918gallery3image.png?updatedAt=1749570292814" alt="person" width="352" height="440">
                     </picture>
                 </a>
             </li>
@@ -651,10 +651,10 @@ eleventyNavigation:
                     <!--Background Image-->
                     <picture class="cs-background">
                         <!--Mobile Image-->
-                        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/wedding1.jpg">
+                        <source media="(max-width: 600px)" srcset="https://ik.imagekit.io/6ycdefzj5/918gallery4image.png?updatedAt=1749570331696">
                         <!--Tablet and above Image-->
-                        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/wedding1.jpg">
-                        <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/wedding1.jpg" alt="person" width="352" height="440">
+                        <source media="(min-width: 601px)" srcset="https://ik.imagekit.io/6ycdefzj5/918gallery4image.png?updatedAt=1749570331696">
+                        <img loading="lazy" decoding="async" src="https://ik.imagekit.io/6ycdefzj5/918gallery4image.png?updatedAt=1749570331696" alt="person" width="352" height="440">
                     </picture>
                 </a>
             </li>
@@ -670,10 +670,10 @@ eleventyNavigation:
                     <!--Background Image-->
                     <picture class="cs-background">
                         <!--Mobile Image-->
-                        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/wedding1.jpg">
+                        <source media="(max-width: 600px)" srcset="https://ik.imagekit.io/6ycdefzj5/918gallery5image.png?updatedAt=1749570361628">
                         <!--Tablet and above Image-->
-                        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/wedding1.jpg">
-                        <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/wedding1.jpg" alt="person" width="352" height="440">
+                        <source media="(min-width: 601px)" srcset="https://ik.imagekit.io/6ycdefzj5/918gallery5image.png?updatedAt=1749570361628">
+                        <img loading="lazy" decoding="async" src="https://ik.imagekit.io/6ycdefzj5/918gallery5image.png?updatedAt=1749570361628" alt="person" width="352" height="440">
                     </picture>
                 </a>
             </li>
@@ -689,10 +689,10 @@ eleventyNavigation:
                     <!--Background Image-->
                     <picture class="cs-background">
                         <!--Mobile Image-->
-                        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/wedding1.jpg">
+                        <source media="(max-width: 600px)" srcset="https://ik.imagekit.io/6ycdefzj5/918gallery6image.png?updatedAt=1749570387779">
                         <!--Tablet and above Image-->
-                        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/wedding1.jpg">
-                        <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/wedding1.jpg" alt="person" width="352" height="440">
+                        <source media="(min-width: 601px)" srcset="https://ik.imagekit.io/6ycdefzj5/918gallery6image.png?updatedAt=1749570387779">
+                        <img loading="lazy" decoding="async" src="https://ik.imagekit.io/6ycdefzj5/918gallery6image.png?updatedAt=1749570387779" alt="person" width="352" height="440">
                     </picture>
                 </a>
             </li>
